Polishing.
Move off deprecated API in tests.

See #3305
Original pull request: #3307